--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-13  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Branko Collin.
+
 2004-03-12  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
