2004-03-14  Sven Neumann  <sven@gimp.org>
	* app/tools/gimptextoptions.[ch]
	* app/tools/gimptexttool.[ch]: introduced a proxy GimpText object
	that is tied to the GimpTextOptions for the lifetime of the text
	tool. Brings us one step closer to text undo...


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12650 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-14  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimptextoptions.[ch]
+	* app/tools/gimptexttool.[ch]: introduced a proxy GimpText object
+	that is tied to the GimpTextOptions for the lifetime of the text
+	tool. Brings us one step closer to text undo...
+
 2004-03-14  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpdrawable-offset.c (gimp_drawable_offset)
