--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-14  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/splash.c: some code cleanup.
+
+	* app/gui/about_dialog.c: typo.
+
 2004-03-14  Simon Budig  <simon@gimp.org>
 
 	* plug-ins/common/jpeg.c: No need to use an undo_group *and*
