--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-14  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimptooldialog.c (gimp_tool_dialog_new): allow to
+	pass NULL as parent widget.
+
+2004-03-14  Sven Neumann  <sven@gimp.org>
+
 	* app/gui/splash.c: some code cleanup.
 
 	* app/gui/about_dialog.c: typo.
