2004-03-14  Sven Neumann  <sven@gimp.org>
	* app/gui/about-dialog.c: don't abuse the SPLASHSCREEN window type
	hint, instead make the about dialog a popup window and center it
	explicitely.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12656 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-03-14  Sven Neumann  <sven@gimp.org>
 
+	* app/gui/about-dialog.c: don't abuse the SPLASHSCREEN window type
+	hint, instead make the about dialog a popup window and center it
+	explicitely.
+
+2004-03-14  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimptooldialog.c (gimp_tool_dialog_new): allow to
 	pass NULL as parent widget.
 
