--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-14  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-03-13  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: added app/widgets/gimpcontainermenuimpl.c.
