--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-03-15  Simon Budig  <simon@gimp.org>
+
+	* app/core/gimpimage.[ch]
+	* app/core/gimpimage-undo.c: renamed gimage->freeze_count
+	to gimage->undo_freeze_count (more explicit).
+	
+	* app/file/file-open.c: Ensure that the undo system is enabled
+	after loading an image (to protect against broken loaders).
+
 2004-03-14  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpcolorpickertool.c
