2004-03-15  Sigurd Gartmann  <sigurd-translate@brogar.org>
	* no.po: Updated Norwegian BokmÃ¥l translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12660 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-15  Sigurd Gartmann  <sigurd-translate@brogar.org>
+
+	* no.po: Updated Norwegian Bokmål translation.
+
 2004-03-14  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
