--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-15  Jan Morén  <jan.moren@lucs.lu.se>
+
+	* sv.po: Updated Swedish translation.
+
 2004-03-15  Sigurd Gartmann  <sigurd-translate@brogar.org>
 
 	* no.po: Updated Norwegian Bokmål translation.
