--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-15  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation added by Branko Collin.
+
 2004-03-12  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
