2004-03-15  Sven Neumann  <sven@gimp.org>
	* app/gui/splash.c: moved global variables to a struct and
	optimized the area exposed from splash_update().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12674 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-15  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/splash.c: moved global variables to a struct and
+	optimized the area exposed from splash_update().
+
 2004-03-15  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage.[ch]: added "gboolean alpha_changed" to
