--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-15  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.am (tips_POFILES): added nl.po (Dutch).
+
 2004-03-15  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation added by Branko Collin.
