--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-16  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpimage-undo-push.c: removed unused #includes.
+
 2004-03-15  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimptexttool.c (gimp_text_tool_apply): look ahead in
