2004-03-16  Zygimantas Berucka  <uid0@akl.lt>
* lt.po: Updated Lithuanian translation by me and Linas Vasiliauskas.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12689 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-16  Žygimantas Beručka  <uid0@akl.lt>
+
+	* lt.po: Updated Lithuanian translation by me and
+	Linas Vasiliauskas.
+
 2004-03-16  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* sk.po: Updated Slovak translation by Zdenko Podobny.
