--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-16  Pablo G. del Campo  <pablodc@bigfoot.com>
+
+	* es.po: Updated Spanish translation.
+	
 2004-03-15  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
